--- a/practica2/ej2/index.html
+++ b/practica2/ej2/index.html
@@ -6,10 +6,10 @@
 <body>
 	<div class="container">
 		<div class="login">
-			<button type="submit" formaction="login.jsp">Login</button>
+			<a href="login.jsp">Login</a>
 		</div>
 		<div class="register">
-			<button type="submit" formaction="registro.jsp">Registro</button>
+			<a href="registro.jsp">Registro</a>
 		</div>
 	</div>
 </body>
