AAAAAAÑSDFJAKLDLAÑFJALÑJFAÑLJAHGAJ AÑJF AHF IOAFJAÑL

--- a/practica2/ej2/index.html
+++ b/practica2/ej2/index.html
@@ -6,10 +6,10 @@
 <body>
 	<div class="container">
 		<div class="login">
-			<a href="login.jsp">Login</a>
+			<a href="jsp/login.jsp">Login</a>
 		</div>
 		<div class="register">
-			<a href="registro.jsp">Registro</a>
+			<a href="jsp/registro.jsp">Registro</a>
 		</div>
 	</div>
 </body>
