nananana BATMAAAANgit add .!

--- a/practica3/index.html
+++ b/practica3/index.html
@@ -37,10 +37,10 @@
 	<!-- BOTONES PRINCIPALES -->
 	<div class="main">
 		<div class="login">
-			<button id="left" onclick="muestraLogin()">Login</button>
+			<button id="left" onclick="muestraLogin()">Iniciar sesión</button>
 		</div>
 		<div class="register">
-			<button id="right" onclick="muestraRegistro()">Registro</button>
+			<button id="right" onclick="muestraRegistro()">Registrarse</button>
 		</div>
 	</div>
 
@@ -86,7 +86,7 @@
 			<br/>
 
 			<div id="campo">
-			<label class="label" for="seg_ap">Segundo apellido</label>
+				<label class="label" for="seg_ap">Segundo apellido</label>
 				<input type="text" id="seg_ap" name="seg_ap" placeholder="Segundo apellido" required>
 			</div>
 
@@ -109,6 +109,12 @@
 			<div id="campo">
 				<label class="label" for="pass">Contraseña</label>
 				<input type="password" name="pass" required>
+			</div>
+
+			<br/>
+
+			<div id="campo">
+				<label class="label" for="pass-rep">Repetir contraseña</label>
 				<input type="password" name="pass-rep" required>
 			</div>
 
