--- a/p3_html/html/mis_anuncios.html
+++ b/p3_html/html/mis_anuncios.html
@@ -58,10 +58,6 @@
 				<br/>
 				<br/>
 
-				<label class="checkbox-class">Autor
-				  <input type="radio" name="search">
-				  <span class="checkmark-radio"></span>
-				</label>
 				<label class="checkbox-class">Tema
 				  <input type="radio" name="search">
 				  <span class="checkmark-radio"></span>
@@ -96,11 +92,7 @@
 				<br/>
 
 				<h2>Ordenar por</h2>
-				
-				<label class="checkbox-class">Autor
-					<input type="radio" checked="checked" name="order">
-					<span class="checkmark-radio"></span>
-				</label>
+
 				<label class="checkbox-class">Tema
 					<input type="radio" name="order">
 					<span class="checkmark-radio"></span>
@@ -115,7 +107,7 @@
 		<div id="anuncios">
 			<div class="anuncio-class">
 				<h1>Título</h1>
-				<p class="fecha">20 de Diciembre de 2020 - <span id="autor">Nombre autor</span></p>
+				<p class="fecha">20 de Diciembre de 2020 - <span id="autor">Estado</span></p>
 				<p class="text">
 					Lorem ipsum dolor sit amet consectetur adipiscing elit luctus a habitant, sagittis turpis laoreet pulvinar lobortis taciti ridiculus tincidunt etiam fames, habitasse rhoncus dictum per magnis bibendum vivamus praesent sem. Conubia himenaeos molestie augue cursus dignissim tortor convallis fusce penatibus, bibendum morbi euismod class ante aliquet nulla nostra dapibus sapien, sem fringilla quam velit varius at dis diam. Ad per lacinia dapibus himenaeos blandit cursus, tellus vel tortor vestibulum aliquet urna, sociis interdum eu quisque ac. 
 					
