--- a/p3_html/html/configuracion.html
+++ b/p3_html/html/configuracion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Inicio | Tablon de anuncios</title>
+	<title>Configuración</title>
 
 	<!--
 		-Resumen: Pagina principal
@@ -13,9 +13,8 @@
 	<link rel="stylesheet" href="../css/header.css">
 	<link rel="stylesheet" href="../css/tablon.css">
 
-	<!-- FAVICON 
-	<link rel="shortcut icon" type="image/png" href="./Media/favicon.ico"/>
-	-->
+	<!-- FAVICON -->
+	<link rel="shortcut icon" type="image/png" href="../img/logo.png"/>
 
 	<!-- OTHERS -->
 	<meta charset="UTF-8">
