--- a/p3_html/index.html
+++ b/p3_html/index.html
@@ -12,9 +12,8 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/index.css">
 
-	<!-- FAVICON 
-	<link rel="shortcut icon" type="image/png" href="./Media/favicon.ico"/>
-	-->
+	<!-- FAVICON -->
+	<link rel="shortcut icon" type="image/png" href="../img/logo.png"/>
 
 	<!-- OTHERS -->
 	<meta name="description" content="Pagina principal de la aplicación. En ella se perimite elegir iniciar sesion o registrarse.">
