--- a/practica3/WebContent/p3_html/html/configuracion.html
+++ b/practica3/WebContent/p3_html/html/configuracion.html
@@ -25,7 +25,7 @@
 	<meta name="author" content="Javier Luna Carmona">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body id="body">
+<body>
 	<!-- HEADER -->
 	<div class="navbar">
 		<div class="content">
